startos/fileModels/php-parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

'use strict'

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message)
    this.expected = expected
    this.found = found
    this.location = location
    this.name = 'SyntaxError'
  }

  format(sources) {
    let str = 'Error: ' + this.message
    if (this.location) {
      let src = null
      const st = sources.find((s) => s.source === this.location.source)
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g)
      }
      const s = this.location.start
      const offset_s =
        this.location.source &&
        typeof this.location.source.offset === 'function'
          ? this.location.source.offset(s)
          : s
      const loc =
        this.location.source + ':' + offset_s.line + ':' + offset_s.column
      if (src) {
        const e = this.location.end
        const filler = ''.padEnd(offset_s.line.toString().length, ' ')
        const line = src[s.line - 1]
        const last = s.line === e.line ? e.column : line.length + 1
        const hatLen = last - s.column || 1
        str +=
          '\n --> ' +
          loc +
          '\n' +
          filler +
          ' |\n' +
          offset_s.line +
          ' | ' +
          line +
          '\n' +
          filler +
          ' | ' +
          ''.padEnd(s.column - 1, ' ') +
          ''.padEnd(hatLen, '^')
      } else {
        str += '\n at ' + loc
      }
    }
    return str
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase()
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(
      RegExp.prototype,
      'unicode',
    )
      ? new RegExp('[\\p{C}\\p{Mn}\\p{Mc}]', 'gu')
      : null
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable, (ch) => '\\u{' + hex(ch) + '}')
      }
      return s
    }

    function literalEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, '\\\\')
          .replace(/"/g, '\\"')
          .replace(/\0/g, '\\0')
          .replace(/\t/g, '\\t')
          .replace(/\n/g, '\\n')
          .replace(/\r/g, '\\r')
          .replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch)),
      )
    }

    function classEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, '\\\\')
          .replace(/\]/g, '\\]')
          .replace(/\^/g, '\\^')
          .replace(/-/g, '\\-')
          .replace(/\0/g, '\\0')
          .replace(/\t/g, '\\t')
          .replace(/\n/g, '\\n')
          .replace(/\r/g, '\\r')
          .replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch)),
      )
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return '"' + literalEscape(expectation.text) + '"'
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) =>
          Array.isArray(part)
            ? classEscape(part[0]) + '-' + classEscape(part[1])
            : classEscape(part),
        )

        return (
          '[' +
          (expectation.inverted ? '^' : '') +
          escapedParts.join('') +
          ']' +
          (expectation.unicode ? 'u' : '')
        )
      },

      any() {
        return 'any character'
      },

      end() {
        return 'end of input'
      },

      other(expectation) {
        return expectation.description
      },
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation)
      descriptions.sort()

      if (descriptions.length > 0) {
        let j = 1
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i]
            j++
          }
        }
        descriptions.length = j
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0]

        case 2:
          return descriptions[0] + ' or ' + descriptions[1]

        default:
          return (
            descriptions.slice(0, -1).join(', ') +
            ', or ' +
            descriptions[descriptions.length - 1]
          )
      }
    }

    function describeFound(found) {
      return found ? '"' + literalEscape(found) + '"' : 'end of input'
    }

    return (
      'Expected ' +
      describeExpected(expected) +
      ' but ' +
      describeFound(found) +
      ' found.'
    )
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {}

  const peg$FAILED = {}
  const peg$source = options.grammarSource

  const peg$startRuleFunctions = {
    Config: peg$parseConfig,
  }
  let peg$startRuleFunction = peg$parseConfig

  const peg$c0 = '<?php'
  const peg$c1 = '$CONFIG'
  const peg$c2 = '='
  const peg$c3 = ';'
  const peg$c4 = ','
  const peg$c5 = 'array'
  const peg$c6 = '('
  const peg$c7 = ')'
  const peg$c8 = '=>'
  const peg$c9 = 'true'
  const peg$c10 = 'false'
  const peg$c11 = 'null'
  const peg$c12 = '.'
  const peg$c13 = '-'
  const peg$c14 = '0'
  const peg$c15 = '\\'
  const peg$c16 = "'"

  const peg$r0 = /^[1-9]/
  const peg$r1 = /^[eE]/
  const peg$r2 = /^[+\-]/
  const peg$r3 = /^['\\]/
  const peg$r4 = /^[^'\\]/
  const peg$r5 = /^[ \t\n\r]/
  const peg$r6 = /^[0-9]/

  const peg$e0 = peg$literalExpectation('<?php', false)
  const peg$e1 = peg$literalExpectation('$CONFIG', false)
  const peg$e2 = peg$literalExpectation('=', false)
  const peg$e3 = peg$literalExpectation(';', false)
  const peg$e4 = peg$literalExpectation(',', false)
  const peg$e5 = peg$literalExpectation('array', false)
  const peg$e6 = peg$literalExpectation('(', false)
  const peg$e7 = peg$literalExpectation(')', false)
  const peg$e8 = peg$literalExpectation('=>', false)
  const peg$e9 = peg$literalExpectation('true', true)
  const peg$e10 = peg$literalExpectation('false', true)
  const peg$e11 = peg$literalExpectation('null', true)
  const peg$e12 = peg$literalExpectation('.', false)
  const peg$e13 = peg$classExpectation([['1', '9']], false, false, false)
  const peg$e14 = peg$classExpectation(['e', 'E'], false, false, false)
  const peg$e15 = peg$classExpectation(['+', '-'], false, false, false)
  const peg$e16 = peg$literalExpectation('-', false)
  const peg$e17 = peg$literalExpectation('0', false)
  const peg$e18 = peg$classExpectation(["'", '\\'], false, false, false)
  const peg$e19 = peg$anyExpectation()
  const peg$e20 = peg$literalExpectation('\\', false)
  const peg$e21 = peg$literalExpectation("'", false)
  const peg$e22 = peg$classExpectation(["'", '\\'], true, false, false)
  const peg$e23 = peg$otherExpectation('required-whitespace')
  const peg$e24 = peg$classExpectation(
    [' ', '\t', '\n', '\r'],
    false,
    false,
    false,
  )
  const peg$e25 = peg$classExpectation([['0', '9']], false, false, false)

  function peg$f0(config) {
    return config
  }
  function peg$f1(entry) {
    return entry
  }
  function peg$f2(first, rest) {
    const entries = [first, ...rest]
    let res = []
    let autoIdx = 0
    for (let i = 0; i < entries.length; i++) {
      const { key, value } = entries[i]
      const k = key === null ? autoIdx : key
      if (typeof k === 'number') autoIdx = k + 1
      if (k !== res.length && Array.isArray(res))
        res = res.reduce((acc, x, idx) => ({ ...acc, [idx]: x }), {})
      res[k] = value
    }
    return res
  }
  function peg$f3() {
    return []
  }
  function peg$f4(key, value) {
    return { key, value }
  }
  function peg$f5(value) {
    return { key: null, value }
  }
  function peg$f6() {
    return true
  }
  function peg$f7() {
    return false
  }
  function peg$f8() {
    return null
  }
  function peg$f9() {
    return parseFloat(text())
  }
  function peg$f10(chars) {
    return chars.join('')
  }
  function peg$f11(c) {
    return '\\' + c
  }
  function peg$f12(sequence) {
    return sequence
  }
  let peg$currPos = options.peg$currPos | 0
  let peg$savedPos = peg$currPos
  const peg$posDetailsCache = [{ line: 1, column: 1 }]
  let peg$maxFailPos = peg$currPos
  let peg$maxFailExpected = options.peg$maxFailExpected || []
  let peg$silentFails = options.peg$silentFails | 0

  let peg$result

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        'Can\'t start parsing from rule "' + options.startRule + '".',
      )
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos)
  }

  function offset() {
    return peg$savedPos
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    }
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos)
  }

  function expected(description, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    )
  }

  function error(message, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location)
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos)
    if (cp === undefined) {
      return ''
    }
    return String.fromCodePoint(cp)
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text, ignoreCase }
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: 'class', parts, inverted, ignoreCase, unicode }
  }

  function peg$anyExpectation() {
    return { type: 'any' }
  }

  function peg$endExpectation() {
    return { type: 'end' }
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description }
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos]
    let p

    if (details) {
      return details
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1
      } else {
        p = pos
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p]
      details = {
        line: details.line,
        column: details.column,
      }

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++
          details.column = 1
        } else {
          details.column++
        }

        p++
      }

      peg$posDetailsCache[pos] = details

      return details
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos)
    const endPosDetails = peg$computePosDetails(endPos)

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    }
    if (offset && peg$source && typeof peg$source.offset === 'function') {
      res.start = peg$source.offset(res.start)
      res.end = peg$source.offset(res.end)
    }
    return res
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos
      peg$maxFailExpected = []
    }

    peg$maxFailExpected.push(expected)
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location)
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location,
    )
  }

  function peg$parseConfig() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10

    s0 = peg$currPos
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s1 = peg$c0
      peg$currPos += 5
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e0)
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__()
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 7) === peg$c1) {
          s3 = peg$c1
          peg$currPos += 7
        } else {
          s3 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e1)
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_()
          if (input.charCodeAt(peg$currPos) === 61) {
            s5 = peg$c2
            peg$currPos++
          } else {
            s5 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e2)
            }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_()
            s7 = peg$parseValue()
            if (s7 !== peg$FAILED) {
              s8 = peg$parse_()
              if (input.charCodeAt(peg$currPos) === 59) {
                s9 = peg$c3
                peg$currPos++
              } else {
                s9 = peg$FAILED
                if (peg$silentFails === 0) {
                  peg$fail(peg$e3)
                }
              }
              if (s9 !== peg$FAILED) {
                s10 = peg$parse_()
                peg$savedPos = s0
                s0 = peg$f0(s7)
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseNextArrayEntry() {
    let s0, s1, s2, s3, s4

    s0 = peg$currPos
    s1 = peg$parse_()
    if (input.charCodeAt(peg$currPos) === 44) {
      s2 = peg$c4
      peg$currPos++
    } else {
      s2 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e4)
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_()
      s4 = peg$parseArrayEntry()
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0
        s0 = peg$f1(s4)
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseArray() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10

    s0 = peg$currPos
    if (input.substr(peg$currPos, 5) === peg$c5) {
      s1 = peg$c5
      peg$currPos += 5
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e5)
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_()
      if (input.charCodeAt(peg$currPos) === 40) {
        s3 = peg$c6
        peg$currPos++
      } else {
        s3 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e6)
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_()
        s5 = peg$parseArrayEntry()
        if (s5 !== peg$FAILED) {
          s6 = []
          s7 = peg$parseNextArrayEntry()
          while (s7 !== peg$FAILED) {
            s6.push(s7)
            s7 = peg$parseNextArrayEntry()
          }
          s7 = peg$parse_()
          if (input.charCodeAt(peg$currPos) === 44) {
            s8 = peg$c4
            peg$currPos++
          } else {
            s8 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e4)
            }
          }
          if (s8 === peg$FAILED) {
            s8 = null
          }
          s9 = peg$parse_()
          if (input.charCodeAt(peg$currPos) === 41) {
            s10 = peg$c7
            peg$currPos++
          } else {
            s10 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e7)
            }
          }
          if (s10 !== peg$FAILED) {
            peg$savedPos = s0
            s0 = peg$f2(s5, s6)
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      if (input.substr(peg$currPos, 5) === peg$c5) {
        s1 = peg$c5
        peg$currPos += 5
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e5)
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_()
        if (input.charCodeAt(peg$currPos) === 40) {
          s3 = peg$c6
          peg$currPos++
        } else {
          s3 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e6)
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_()
          if (input.charCodeAt(peg$currPos) === 41) {
            s5 = peg$c7
            peg$currPos++
          } else {
            s5 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e7)
            }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s0
            s0 = peg$f3()
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    }

    return s0
  }

  function peg$parseArrayEntry() {
    let s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$parseKey()
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_()
      if (input.substr(peg$currPos, 2) === peg$c8) {
        s3 = peg$c8
        peg$currPos += 2
      } else {
        s3 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e8)
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_()
        s5 = peg$parseValue()
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0
          s0 = peg$f4(s1, s5)
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      s1 = peg$parseValue()
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$f5(s1)
      }
      s0 = s1
    }

    return s0
  }

  function peg$parseKey() {
    let s0

    s0 = peg$parseString()
    if (s0 === peg$FAILED) {
      s0 = peg$parseNumber()
    }

    return s0
  }

  function peg$parseValue() {
    let s0

    s0 = peg$parseString()
    if (s0 === peg$FAILED) {
      s0 = peg$parseNumber()
      if (s0 === peg$FAILED) {
        s0 = peg$parseArray()
        if (s0 === peg$FAILED) {
          s0 = peg$parseBool()
          if (s0 === peg$FAILED) {
            s0 = peg$parseNull()
          }
        }
      }
    }

    return s0
  }

  function peg$parseBool() {
    let s0, s1

    s0 = peg$currPos
    s1 = input.substr(peg$currPos, 4)
    if (s1.toLowerCase() === peg$c9) {
      peg$currPos += 4
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e9)
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$f6()
    }
    s0 = s1
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      s1 = input.substr(peg$currPos, 5)
      if (s1.toLowerCase() === peg$c10) {
        peg$currPos += 5
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e10)
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$f7()
      }
      s0 = s1
    }

    return s0
  }

  function peg$parseNull() {
    let s0, s1

    s0 = peg$currPos
    s1 = input.substr(peg$currPos, 4)
    if (s1.toLowerCase() === peg$c11) {
      peg$currPos += 4
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e11)
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$f8()
    }
    s0 = s1

    return s0
  }

  function peg$parseNumber() {
    let s0, s1, s2, s3, s4

    s0 = peg$currPos
    s1 = peg$parseminus()
    if (s1 === peg$FAILED) {
      s1 = null
    }
    s2 = peg$parseint()
    if (s2 !== peg$FAILED) {
      s3 = peg$parsefrac()
      if (s3 === peg$FAILED) {
        s3 = null
      }
      s4 = peg$parseexp()
      if (s4 === peg$FAILED) {
        s4 = null
      }
      peg$savedPos = s0
      s0 = peg$f9()
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parsedecimal_point() {
    let s0

    if (input.charCodeAt(peg$currPos) === 46) {
      s0 = peg$c12
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e12)
      }
    }

    return s0
  }

  function peg$parsedigit1_9() {
    let s0

    s0 = input.charAt(peg$currPos)
    if (peg$r0.test(s0)) {
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e13)
      }
    }

    return s0
  }

  function peg$parsee() {
    let s0

    s0 = input.charAt(peg$currPos)
    if (peg$r1.test(s0)) {
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e14)
      }
    }

    return s0
  }

  function peg$parseexp() {
    let s0, s1, s2, s3, s4

    s0 = peg$currPos
    s1 = peg$parsee()
    if (s1 !== peg$FAILED) {
      s2 = input.charAt(peg$currPos)
      if (peg$r2.test(s2)) {
        peg$currPos++
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e15)
        }
      }
      if (s2 === peg$FAILED) {
        s2 = null
      }
      s3 = []
      s4 = peg$parseDIGIT()
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4)
          s4 = peg$parseDIGIT()
        }
      } else {
        s3 = peg$FAILED
      }
      if (s3 !== peg$FAILED) {
        s1 = [s1, s2, s3]
        s0 = s1
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parsefrac() {
    let s0, s1, s2, s3

    s0 = peg$currPos
    s1 = peg$parsedecimal_point()
    if (s1 !== peg$FAILED) {
      s2 = []
      s3 = peg$parseDIGIT()
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3)
          s3 = peg$parseDIGIT()
        }
      } else {
        s2 = peg$FAILED
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2]
        s0 = s1
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseint() {
    let s0, s1, s2, s3

    s0 = peg$parsezero()
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      s1 = peg$parsedigit1_9()
      if (s1 !== peg$FAILED) {
        s2 = []
        s3 = peg$parseDIGIT()
        while (s3 !== peg$FAILED) {
          s2.push(s3)
          s3 = peg$parseDIGIT()
        }
        s1 = [s1, s2]
        s0 = s1
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    }

    return s0
  }

  function peg$parseminus() {
    let s0

    if (input.charCodeAt(peg$currPos) === 45) {
      s0 = peg$c13
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e16)
      }
    }

    return s0
  }

  function peg$parsezero() {
    let s0

    if (input.charCodeAt(peg$currPos) === 48) {
      s0 = peg$c14
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e17)
      }
    }

    return s0
  }

  function peg$parseString() {
    let s0, s1, s2, s3

    s0 = peg$currPos
    s1 = peg$parsequotation_mark()
    if (s1 !== peg$FAILED) {
      s2 = []
      s3 = peg$parsechar()
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$parsechar()
      }
      s3 = peg$parsequotation_mark()
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0
        s0 = peg$f10(s2)
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parsechar() {
    let s0, s1, s2, s3

    s0 = peg$parseunescaped()
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      s1 = peg$parseescape()
      if (s1 !== peg$FAILED) {
        s2 = input.charAt(peg$currPos)
        if (peg$r3.test(s2)) {
          peg$currPos++
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e18)
          }
        }
        if (s2 === peg$FAILED) {
          s2 = peg$currPos
          if (input.length > peg$currPos) {
            s3 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s3 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$e19)
            }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s2
            s3 = peg$f11(s3)
          }
          s2 = s3
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0
          s0 = peg$f12(s2)
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    }

    return s0
  }

  function peg$parseescape() {
    let s0

    if (input.charCodeAt(peg$currPos) === 92) {
      s0 = peg$c15
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e20)
      }
    }

    return s0
  }

  function peg$parsequotation_mark() {
    let s0

    if (input.charCodeAt(peg$currPos) === 39) {
      s0 = peg$c16
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e21)
      }
    }

    return s0
  }

  function peg$parseunescaped() {
    let s0

    s0 = input.charAt(peg$currPos)
    if (peg$r4.test(s0)) {
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e22)
      }
    }

    return s0
  }

  function peg$parse__() {
    let s0, s1

    peg$silentFails++
    s0 = []
    s1 = input.charAt(peg$currPos)
    if (peg$r5.test(s1)) {
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e24)
      }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1)
        s1 = input.charAt(peg$currPos)
        if (peg$r5.test(s1)) {
          peg$currPos++
        } else {
          s1 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$e24)
          }
        }
      }
    } else {
      s0 = peg$FAILED
    }
    peg$silentFails--
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e23)
      }
    }

    return s0
  }

  function peg$parse_() {
    let s0, s1

    peg$silentFails++
    s0 = []
    s1 = input.charAt(peg$currPos)
    if (peg$r5.test(s1)) {
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e24)
      }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1)
      s1 = input.charAt(peg$currPos)
      if (peg$r5.test(s1)) {
        peg$currPos++
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$e24)
        }
      }
    }
    peg$silentFails--

    return s0
  }

  function peg$parseDIGIT() {
    let s0

    s0 = input.charAt(peg$currPos)
    if (peg$r6.test(s0)) {
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$e25)
      }
    }

    return s0
  }

  peg$result = peg$startRuleFunction()

  const peg$success = peg$result !== peg$FAILED && peg$currPos === input.length
  function peg$throw() {
    if (peg$result !== peg$FAILED && peg$currPos < input.length) {
      peg$fail(peg$endExpectation())
    }

    throw peg$buildStructuredError(
      peg$maxFailExpected,
      peg$maxFailPos < input.length ? peg$getUnicode(peg$maxFailPos) : null,
      peg$maxFailPos < input.length
        ? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
        : peg$computeLocation(peg$maxFailPos, peg$maxFailPos),
    )
  }
  if (options.peg$library) {
    return /** @type {any} */ ({
      peg$result,
      peg$currPos,
      peg$FAILED,
      peg$maxFailExpected,
      peg$maxFailPos,
      peg$success,
      peg$throw: peg$success ? undefined : peg$throw,
    })
  }
  if (peg$success) {
    return peg$result
  } else {
    peg$throw()
  }
}

module.exports = {
  StartRules: ['Config'],
  SyntaxError: peg$SyntaxError,
  parse: peg$parse,
}
